<resources>
    <string name="app_name">TimeToGo</string>
    <string name="first_address">Click on the map icon to enter first address!</string>
    <string name="second_address">Click on the map icon to enter second address!</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="clear_history">CLEAR</string>
    <string name="unknown">---</string>
    <string name="action_settings">Settings</string>
    <string name="pref_toll_usage_label">Toll roads</string>
    <string name="pref_avoid_toll_key" translatable="false">avoid_toll_roads</string>
    <string name="pref_avoid_toll_false">Use tool roads</string>
    <string name="pref_avoid_toll_true">Avoid toll roads</string>
    <string name="title_activity_settings">Settings</string>
    <string name="changes_takes_effect">Changes takes effect\nafter next start!</string>
    <string name="address_empty">Addressfields are empty!</string>
    <string name="graph_title">History (min)</string>
    <string name="started">Started!</string>
    <string name="now">Now</string>
    <string name="app_finished"> has finished</string>
    <string name="select_address">Select an earlier address!</string>
    <string name="minutes">%1$d min</string>
    <string name="hours_minutes">%1$d h %2$d m"</string>
    <string name="lookup_failed">Failed to lookup traveltime!</string>
    <string name="is_running">is running.</string>
    <string name="clear_history_prompt">Clear</string>
    <string name="clear_history_prompt_message">Clear all addresses
        and history?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="clear_history_cancelled">Nothing was deleted!</string>
    <string name="clear_history_ok">Addresses and history deleted</string>
    <string name="distance_in_km">(%1$d km)</string>
</resources>
