<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ToggleButton
        android:id="@+id/switch_travelchecker_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/windowBackground"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        android:paddingStart="16dp"
        app:layout_constraintTop_toBottomOf="parent"
        android:textOff="@string/start"
        android:textOn="@string/stop"
        android:onClick="onSwitchTravelCheckerServiceClicked"
        android:layout_marginLeft="16dp" />

    <Button
        android:id="@+id/clear_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_history"
        android:layout_marginTop="8dp"
        android:paddingEnd="16dp"
        android:textColor="@color/windowBackground"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="onButtonClearHistoryClicked"
        android:layout_marginRight="16dp" />

    <ImageButton
        android:id="@+id/map_first"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:background="@drawable/rounded_corner_button"
        android:elevation="4dp"
        android:onClick="onButtonFirstUseMapClicked"
        android:scaleType="fitXY"
        android:src="@drawable/ic_map"
        app:layout_constraintTop_toBottomOf="@+id/switch_travelchecker_service"
        android:layout_marginLeft="4dp"

        app:layout_constraintLeft_toLeftOf="@+id/switch_travelchecker_service" />

    <Spinner
        android:id="@+id/first_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:prompt="@string/select_address"
        android:spinnerMode="dialog"
        app:layout_constraintBottom_toTopOf="@+id/map_first"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/map_first"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map_first"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/first_previous_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="0dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/first_address"
        android:ems="10"
        app:layout_constraintBottom_toTopOf="@+id/map_first"
        app:layout_constraintLeft_toRightOf="@+id/map_first"
        app:layout_constraintTop_toBottomOf="@+id/map_first"
        app:layout_constraintVertical_bias="0.51"
        app:layout_constraintRight_toRightOf="@+id/first_previous_delete" />
    <ImageView
        android:id="@+id/first_previous_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_delete"
        android:layout_marginEnd="16dp"
        android:onClick="onDeleteFirstAddressClicked"
        app:layout_constraintBottom_toTopOf="@+id/first_previous"
        app:layout_constraintTop_toBottomOf="@+id/first_previous"
        app:layout_constraintEnd_toEndOf="parent"/>




    <ImageButton
        android:id="@+id/map"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="0dp"
        android:adjustViewBounds="true"
        android:background="@drawable/rounded_corner_button"
        android:elevation="4dp"
        android:onClick="onMapDirectionsClicked"
        android:scaleType="fitXY"
        android:src="@drawable/ic_directions"
        app:layout_constraintLeft_toLeftOf="@+id/map_first"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/map_first" />

    <ToggleButton
        android:id="@+id/direction"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/directionbutton_toggle"
        android:elevation="4dp"
        android:onClick="onSwitchDirectionClicked"
        android:textOff=""
        android:textOn=""
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/map"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/map"
        app:layout_constraintLeft_toRightOf="@+id/map"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.04" />

    <ImageButton
        android:id="@+id/public_transportations"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="0dp"
        android:adjustViewBounds="true"
        android:background="@drawable/rounded_corner_button"
        android:elevation="4dp"
        android:onClick="onMapPublicTransportationsClicked"
        android:scaleType="fitXY"
        android:src="@drawable/ic_directions_bus"
        android:layout_marginTop="0dp"

        app:layout_constraintTop_toBottomOf="@+id/direction"
        app:layout_constraintBottom_toTopOf="@+id/direction"
        app:layout_constraintLeft_toRightOf="@+id/direction"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.07" />

    <ImageButton
        android:id="@+id/map_second"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="0dp"
        android:adjustViewBounds="true"
        android:background="@drawable/rounded_corner_button"
        android:elevation="4dp"
        android:onClick="onButtonSecondUseMapClicked"
        android:scaleType="fitXY"
        android:src="@drawable/ic_map"
        app:layout_constraintLeft_toLeftOf="@+id/map_first"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/map" />

    <Spinner
        android:id="@+id/second_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:prompt="@string/select_address"
        android:spinnerMode="dialog"
        app:layout_constraintBottom_toTopOf="@+id/map_second"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintLeft_toRightOf="@+id/map_second"
        app:layout_constraintRight_toLeftOf="@+id/second_previous_delete"
        app:layout_constraintTop_toBottomOf="@+id/map_second"
        android:layout_marginRight="16dp" />
    <TextView
        android:id="@+id/second_previous_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="0dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/second_address"
        android:ems="10"
        app:layout_constraintBottom_toTopOf="@+id/map_second"
        app:layout_constraintLeft_toRightOf="@+id/map_second"
        app:layout_constraintRight_toLeftOf="@+id/second_previous_delete"
        app:layout_constraintTop_toBottomOf="@+id/map_second"
        app:layout_constraintHorizontal_bias="0.51" />
    <ImageView
        android:id="@+id/second_previous_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_delete"
        android:layout_marginEnd="16dp"
        android:onClick="onDeleteSecondAddressClicked"
        app:layout_constraintBottom_toTopOf="@+id/second_previous"
        app:layout_constraintTop_toBottomOf="@+id/second_previous"
        app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>
